ColorRamp node crash #64059

Closed
opened 2019-05-01 15:27:26 +02:00 by Ian Finnimore · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: 480a09a92f
Worked: (optional)

Short description of error
Adjusting either colors of a 2 color ColorRamp node to 1.0 value [HSV] cause app crash

Exact steps for others to reproduce the error
Using attached .blend (tried and failed to reproduce in default startup blend).

Blend file opens to Shading workflow with SoundSphere mesh selected, Material SoundSphere

Moderately complex surface shader is work in progress. Centered in screen is newly added ColorRamp node.

Select black color to change. As HSV, change value to 1 by dragging vertical handle or dragging in Value field. Blender crashes before releasing mouse.

Consistent if ColorRamp node is deleted and re-added.

Note: Click & Typing 1 for Value succeeds.

StarportV3Lights2.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: `480a09a92f` Worked: (optional) **Short description of error** Adjusting either colors of a 2 color ColorRamp node to 1.0 value [HSV] cause app crash **Exact steps for others to reproduce the error** Using attached .blend (tried and failed to reproduce in default startup blend). Blend file opens to Shading workflow with SoundSphere mesh selected, Material SoundSphere Moderately complex surface shader is work in progress. Centered in screen is newly added ColorRamp node. Select black color to change. As HSV, change value to 1 by dragging vertical handle or dragging in Value field. Blender crashes before releasing mouse. Consistent if ColorRamp node is deleted and re-added. Note: Click & Typing 1 for Value succeeds. [StarportV3Lights2.blend](https://archive.blender.org/developer/F6998783/StarportV3Lights2.blend)
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-05-02 14:34:07 +02:00

I'm getting asserts when going into HSV mode:

BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph.cc:120, add_id_node(), at '(id->tag & LIB_TAG_COPIED_ON_WRITE) == 0'
BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:1266, deg_tag_copy_on_write_id(), at '(id_orig->tag & LIB_TAG_COPIED_ON_WRITE) == 0'
BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1138, build_animdata_curves(), at 'node_from != __null'

If I ignore that I get a crash:

Thread 37 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffb23a4700 (LWP 6359)]
0x0000555557f617b9 in DEG::DepsgraphNodeBuilder::build_driver_variables (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:902
902	  LISTBASE_FOREACH (DriverVar *, dvar, &fcurve->driver->variables) {
(gdb) bt
#0  0x0000555557f617b9 in DEG::DepsgraphNodeBuilder::build_driver_variables (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:902
#1  0x0000555557f61747 in DEG::DepsgraphNodeBuilder::build_driver (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288, driver_index=2)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:896
#2  0x0000555557f61382 in DEG::DepsgraphNodeBuilder::build_animdata (this=0x7fffb23a3780, id=0x7fffca708008)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:835
#3  0x0000555557f6351f in DEG::DepsgraphNodeBuilder::build_nodetree (this=0x7fffb23a3780, ntree=0x7fffca708008)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1332
#4  0x0000555557f6396b in DEG::DepsgraphNodeBuilder::build_material (this=0x7fffb23a3780, material=0x7fffca702d08)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1404
#5  0x0000555557f62b36 in DEG::DepsgraphNodeBuilder::build_object_data_geometry (this=0x7fffb23a3780, object=0x7fffd2cf2208, is_object_visible=true)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1188
#6  0x0000555557f607f3 in DEG::DepsgraphNodeBuilder::build_object_data (this=0x7fffb23a3780, object=0x7fffd2cf2208, is_object_visible=true)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:656
#7  0x0000555557f603c2 in DEG::DepsgraphNodeBuilder::build_object (this=0x7fffb23a3780, base_index=-1, object=0x7fffd2cf2208,
    linked_state=DEG::DEG_ID_LINKED_INDIRECTLY, is_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:583
#8  0x0000555557f636e9 in DEG::DepsgraphNodeBuilder::build_nodetree (this=0x7fffb23a3780, ntree=0x7fffcf536408)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1359
#9  0x0000555557f6396b in DEG::DepsgraphNodeBuilder::build_material (this=0x7fffb23a3780, material=0x7fffbfb38b08)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1404
#10 0x0000555557f62b36 in DEG::DepsgraphNodeBuilder::build_object_data_geometry (this=0x7fffb23a3780, object=0x7fffbfb35e08, is_object_visible=true)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1188
#11 0x0000555557f607f3 in DEG::DepsgraphNodeBuilder::build_object_data (this=0x7fffb23a3780, object=0x7fffbfb35e08, is_object_visible=true)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:656
#12 0x0000555557f603c2 in DEG::DepsgraphNodeBuilder::build_object (this=0x7fffb23a3780, base_index=1, object=0x7fffbfb35e08,
    linked_state=DEG::DEG_ID_LINKED_DIRECTLY, is_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:583
#13 0x0000555557f756f3 in DEG::DepsgraphNodeBuilder::build_view_layer (this=0x7fffb23a3780, scene=0x7fffbd111008, view_layer=0x7fffbfb11088,
    linked_state=DEG::DEG_ID_LINKED_DIRECTLY) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes_view_layer.cc:108
#14 0x0000555557f54a49 in DEG_graph_build_from_view_layer (graph=0x7fffbe01d308, bmain=0x7fffbf47f708, scene=0x7fffbd111008, view_layer=0x7fffbfb11088)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph_build.cc:246
#15 0x0000555557f54d0e in DEG_graph_relations_update (graph=0x7fffbe01d308, bmain=0x7fffbf47f708, scene=0x7fffbd111008, view_layer=0x7fffbfb11088)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph_build.cc:308
#16 0x0000555557cfad52 in BKE_scene_graph_update_for_newframe (depsgraph=0x7fffbe01d308, bmain=0x7fffbf47f708)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/scene.c:1567
#17 0x000055555801ee02 in engine_depsgraph_init (engine=0x7fffbe028288, view_layer=0x7fffbfb11088)
    at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:518
- 18 0x000055555801f829 in RE_engine_render (re=0x7fffbe011008, do_all=0) at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:762
- 19 0x0000555558022fd3 in do_render_3d (re=0x7fffbe011008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1146
#20 0x0000555558027bc1 in RE_PreviewRender (re=0x7fffbe011008, bmain=0x7fffbf47f708, sce=0x7fffbd111008)
    at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:2756
#21 0x000055555c72eeee in shader_preview_render (sp=0x7fffbe00e0c8, id=0x7fffcab2d888, split=0, first=0)
    at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:909
#22 0x000055555c72f033 in shader_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a)
    at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:947
#23 0x000055555c72f932 in icon_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a)
    at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1153
#24 0x000055555c72f9d4 in common_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a, UNUSED_progress=0x7fffbfb0f440)
--Type <RET> for more, q to quit, c to continue without paging--
    at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1175
#25 0x000055555c72fccd in icon_preview_startjob_all_sizes (customdata=0x7fffd2f67248, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a, progress=0x7fffbfb0f440)
    at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1258
- 26 0x0000555558262fef in do_job_thread (job_v=0x7fffbfb0f3c8) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_jobs.c:376
- 27 0x0000555557efaba2 in tslot_thread_start (tslot_p=0x7fffbd0be5c8) at /home/zed/prog/blender/source/blender/blenlib/intern/threads.c:259
- 28 0x00007ffff3412443 in start_thread () from /lib64/libpthread.so.0
- 29 0x00007ffff333c5af in clone () from /lib64/libc.so.
I'm getting asserts when going into HSV mode: ``` BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph.cc:120, add_id_node(), at '(id->tag & LIB_TAG_COPIED_ON_WRITE) == 0' BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:1266, deg_tag_copy_on_write_id(), at '(id_orig->tag & LIB_TAG_COPIED_ON_WRITE) == 0' BLI_assert failed: /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_relations.cc:1138, build_animdata_curves(), at 'node_from != __null' ``` If I ignore that I get a crash: ``` Thread 37 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffb23a4700 (LWP 6359)] 0x0000555557f617b9 in DEG::DepsgraphNodeBuilder::build_driver_variables (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:902 902 LISTBASE_FOREACH (DriverVar *, dvar, &fcurve->driver->variables) { (gdb) bt #0 0x0000555557f617b9 in DEG::DepsgraphNodeBuilder::build_driver_variables (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:902 #1 0x0000555557f61747 in DEG::DepsgraphNodeBuilder::build_driver (this=0x7fffb23a3780, id=0x7fffca708008, fcurve=0x7fffd5c22288, driver_index=2) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:896 #2 0x0000555557f61382 in DEG::DepsgraphNodeBuilder::build_animdata (this=0x7fffb23a3780, id=0x7fffca708008) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:835 #3 0x0000555557f6351f in DEG::DepsgraphNodeBuilder::build_nodetree (this=0x7fffb23a3780, ntree=0x7fffca708008) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1332 #4 0x0000555557f6396b in DEG::DepsgraphNodeBuilder::build_material (this=0x7fffb23a3780, material=0x7fffca702d08) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1404 #5 0x0000555557f62b36 in DEG::DepsgraphNodeBuilder::build_object_data_geometry (this=0x7fffb23a3780, object=0x7fffd2cf2208, is_object_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1188 #6 0x0000555557f607f3 in DEG::DepsgraphNodeBuilder::build_object_data (this=0x7fffb23a3780, object=0x7fffd2cf2208, is_object_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:656 #7 0x0000555557f603c2 in DEG::DepsgraphNodeBuilder::build_object (this=0x7fffb23a3780, base_index=-1, object=0x7fffd2cf2208, linked_state=DEG::DEG_ID_LINKED_INDIRECTLY, is_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:583 #8 0x0000555557f636e9 in DEG::DepsgraphNodeBuilder::build_nodetree (this=0x7fffb23a3780, ntree=0x7fffcf536408) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1359 #9 0x0000555557f6396b in DEG::DepsgraphNodeBuilder::build_material (this=0x7fffb23a3780, material=0x7fffbfb38b08) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1404 #10 0x0000555557f62b36 in DEG::DepsgraphNodeBuilder::build_object_data_geometry (this=0x7fffb23a3780, object=0x7fffbfb35e08, is_object_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1188 #11 0x0000555557f607f3 in DEG::DepsgraphNodeBuilder::build_object_data (this=0x7fffb23a3780, object=0x7fffbfb35e08, is_object_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:656 #12 0x0000555557f603c2 in DEG::DepsgraphNodeBuilder::build_object (this=0x7fffb23a3780, base_index=1, object=0x7fffbfb35e08, linked_state=DEG::DEG_ID_LINKED_DIRECTLY, is_visible=true) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:583 #13 0x0000555557f756f3 in DEG::DepsgraphNodeBuilder::build_view_layer (this=0x7fffb23a3780, scene=0x7fffbd111008, view_layer=0x7fffbfb11088, linked_state=DEG::DEG_ID_LINKED_DIRECTLY) at /home/zed/prog/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes_view_layer.cc:108 #14 0x0000555557f54a49 in DEG_graph_build_from_view_layer (graph=0x7fffbe01d308, bmain=0x7fffbf47f708, scene=0x7fffbd111008, view_layer=0x7fffbfb11088) at /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph_build.cc:246 #15 0x0000555557f54d0e in DEG_graph_relations_update (graph=0x7fffbe01d308, bmain=0x7fffbf47f708, scene=0x7fffbd111008, view_layer=0x7fffbfb11088) at /home/zed/prog/blender/source/blender/depsgraph/intern/depsgraph_build.cc:308 #16 0x0000555557cfad52 in BKE_scene_graph_update_for_newframe (depsgraph=0x7fffbe01d308, bmain=0x7fffbf47f708) at /home/zed/prog/blender/source/blender/blenkernel/intern/scene.c:1567 #17 0x000055555801ee02 in engine_depsgraph_init (engine=0x7fffbe028288, view_layer=0x7fffbfb11088) at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:518 - 18 0x000055555801f829 in RE_engine_render (re=0x7fffbe011008, do_all=0) at /home/zed/prog/blender/source/blender/render/intern/source/external_engine.c:762 - 19 0x0000555558022fd3 in do_render_3d (re=0x7fffbe011008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:1146 #20 0x0000555558027bc1 in RE_PreviewRender (re=0x7fffbe011008, bmain=0x7fffbf47f708, sce=0x7fffbd111008) at /home/zed/prog/blender/source/blender/render/intern/source/pipeline.c:2756 #21 0x000055555c72eeee in shader_preview_render (sp=0x7fffbe00e0c8, id=0x7fffcab2d888, split=0, first=0) at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:909 #22 0x000055555c72f033 in shader_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a) at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:947 #23 0x000055555c72f932 in icon_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a) at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1153 #24 0x000055555c72f9d4 in common_preview_startjob (customdata=0x7fffbe00e0c8, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a, UNUSED_progress=0x7fffbfb0f440) --Type <RET> for more, q to quit, c to continue without paging-- at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1175 #25 0x000055555c72fccd in icon_preview_startjob_all_sizes (customdata=0x7fffd2f67248, stop=0x7fffbfb0f43c, do_update=0x7fffbfb0f43a, progress=0x7fffbfb0f440) at /home/zed/prog/blender/source/blender/editors/render/render_preview.c:1258 - 26 0x0000555558262fef in do_job_thread (job_v=0x7fffbfb0f3c8) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_jobs.c:376 - 27 0x0000555557efaba2 in tslot_thread_start (tslot_p=0x7fffbd0be5c8) at /home/zed/prog/blender/source/blender/blenlib/intern/threads.c:259 - 28 0x00007ffff3412443 in start_thread () from /lib64/libpthread.so.0 - 29 0x00007ffff333c5af in clone () from /lib64/libc.so. ```

This sounds very similar to #63747.
Someone is passing wrongly ocnfigured scene to the dependency graph. You can't really solve that by ignoring asserts in the code. Those are there for a reason.

This sounds very similar to #63747. Someone is passing wrongly ocnfigured scene to the dependency graph. You can't really solve that by ignoring asserts in the code. Those are there for a reason.

This issue was referenced by 51347be24e

This issue was referenced by 51347be24e474a3ad3d38a75d0060ca91b8a9794

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64059
No description provided.